api.spring.demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springdemo-deployment
  labels:
    app: springdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springdemo
  template:
    metadata:
      labels:
        app: springdemo
    spec:
      containers:
        - name: springdemo
          image: damou/springdemo-resteasy
          ports:
            - containerPort: 8083
---

apiVersion: v1
kind: Service
metadata:
  name: springdemo-service
spec:
  selector:
    app: springdemo
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8083
