mongo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec:
  rules:
    - host: jesuisdidiss.com
      http:
        paths:
          - backend:
              serviceName: mongodb-express-service
              servicePort: 8081
